# High-dimensiona_kNN_by_batch

./: .gitattributes  BPlusTree.cpp  BPlusTree.h  CMakeLists0.txt  Clustersi.cpp  Clustersi.h  Clustersu.cpp  Clustersu.h  Clusteru.h  HDR_KNN.vcxproj  HDR_Tree.h  Item.cpp  LeafNode.cpp  LeafNode.h  Littletree.cpp  Littletree.h  Node.cpp  Node.h  User.h  itemDataBase.h  itemHDR_Tree.cpp  itemHDR_Tree.h  itemLeafNode.h  itemNode.cpp  itemNode.h  itemNonLeafNode.h  main.cpp  spare.cpp  userLeafNode.cpp  userNode.h  userNonLeafNode.cpp  userNonLeafNode.h
datasets/: enron.txt
knnbatch/: CMakeLists.txt  Cluster.h  Cluster_origin.cpp  Cluster_origin.h  Clusteri.h  Clusters.cpp  Clusters.h  DataBase.cpp  DataBase.h  HDR_KNN.db3  HDR_KNN.sln  HDR_KNN.vcxproj.filters  HDR_Tree.cpp  Item.h  NonLeafNode.cpp  NonLeafNode.h  Project1.vcxproj  README.md  User.cpp  edit_history.txt  itemCluster.h  itemClusters.cpp  itemClusters.h  itemDataBase.cpp  itemLeafNode.cpp  itemNonLeafNode.cpp  userLeafNode.h  userNode.cpp  vtune_analysis.h
knnbatch/spare/: HDR_Tree.cpp
spare/: HDR_Tree.h
